@@ -43,11 +43,11 @@ COPY --from=extractor /app/application/ ./
 # 컨테이너의 8080 포트 개방 선언
 EXPOSE 8080
 
-# ZGC 적용 및 메모리 제한 설정을 포함한 애플리케이션 실행 명령어 정의
+# GIGC 적용 및 메모리 제한 설정을 포함한 애플리케이션 실행 명령어 정의
 ENTRYPOINT ["java", \
             "-Duser.timezone=Asia/Seoul", \
             "-Dnetworkaddress.cache.ttl=5", \
             "-Dsun.net.inetaddr.ttl=5", \
             "-XX:MaxRAMPercentage=75.0", \
-            "-XX:+UseZGC", \
+            "-XX:+UseG1GC", \
             "org.springframework.boot.loader.launch.JarLauncher"]
